--- a/Hiwjcn.Web/Views/Page/Home.cshtml
+++ b/Hiwjcn.Web/Views/Page/Home.cshtml
@@ -1,12 +1,5 @@
-﻿@using Lib.core;
-@using Lib.helper;
-@using Lib.http;
-@using Lib.helper;
-@using Bll;
-@using Model;
-@using Model.Post;
+﻿@using Lib.helper;
 @using Model.Sys;
-@using Model.User;
 @{
     Layout = null;
 }
