修改命名空间

--- a/Hiwjcn.Web/Views/User/UserInfo.cshtml
+++ b/Hiwjcn.Web/Views/User/UserInfo.cshtml
@@ -1,9 +1,4 @@
-﻿@using Lib.core;
-@using Lib.helper;
-@using Lib.http;
-@using Bll;
-@using Model;
-@using Model.User;
+﻿@using Model.User;
 @{
     Layout = null;
 
