--- a/Hiwjcn.Web/Views/Page/News.cshtml
+++ b/Hiwjcn.Web/Views/Page/News.cshtml
@@ -1,14 +1,4 @@
-﻿@using Lib.core;
-@using Lib.helper;
-
-@using Lib.helper;
-@using Bll;
-@using Model;
-@using Model.Post;
-@using Model.Sys;
-@using Model.User;
-@using Hiwjcn.Web.Models.Page;
-@using WebLogic.Model.Page;
+﻿@using WebLogic.Model.Page;
 @{
     Layout = null;
 }
