--- a/Hiwjcn.Web/Views/Shared/header.cshtml
+++ b/Hiwjcn.Web/Views/Shared/header.cshtml
@@ -25,6 +25,7 @@
 <!--bootstrap-->
 <link href="/ui/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <script src="/ui/bootstrap/js/bootstrap.min.js"></script>
+<link href="~/ui/boot-theme/flatly/bootstrap.min.css" rel="stylesheet" />
 <!--弹出层-->
 <script src="~/ui/jq-plus/layer/layer.js"></script>
 <!--font-awesome-->
