--- a/Hiwjcn.Web/Views/User/UpdateUserMask.cshtml
+++ b/Hiwjcn.Web/Views/User/UpdateUserMask.cshtml
@@ -7,7 +7,7 @@
 @{
     Layout = null;
 
-    var model = ViewData["model"] as UserModel;
+    var model = GetModel<UserModel>("model");
 }
 
 <?xml version="1.0" encoding="UTF-8" ?>
