--- a/Hiwjcn.Web/Views/User/SendMessage.cshtml
+++ b/Hiwjcn.Web/Views/User/SendMessage.cshtml
@@ -7,8 +7,7 @@
 @{
     Layout = null;
 
-    UserModel model = ViewData["model"] as UserModel;
-    if (model == null) { model = new UserModel(); }
+    var model = GetModel<UserModel>("model");
 }
 
 <?xml version="1.0" encoding="UTF-8" ?>
@@ -32,7 +31,7 @@
                         <textarea rows="5" cols="20" id="msg" class="form-control" style="height: 300px;"></textarea>
                     </div>
                     <div class="right" style="padding:30px 0;">
-                        <button class="btn btn-primary btn-send" data-to="@(model.UserID)">发送</button>
+                        <button class="btn btn-primary btn-send" data-to="@(model.UID)">发送</button>
                     </div>
                 </div>
             </div>
