--- a/Hiwjcn.Web/Views/Connect/Authorize.cshtml
+++ b/Hiwjcn.Web/Views/Connect/Authorize.cshtml
@@ -1,1 +1,14 @@
-﻿
+﻿@{
+
+}
+
+@{
+    if (this.X.User == null)
+    {
+        //login form
+    }
+    else
+    {
+        //auth button
+    }
+}
