--- a/Hiwjcn.Web/Views/Connect/Authorize.cshtml
+++ b/Hiwjcn.Web/Views/Connect/Authorize.cshtml
@@ -25,8 +25,8 @@
                     {
                         var scopes = Com.NewIfNull<List<AuthScope>>(ViewData["scopes"]);
                         var client = Com.NewIfNull<AuthClient>(ViewData["client"]);
-                        client.ClientName = "汽配龙";
-                        client.LogoUrl = "http://images.qipeilong.cn/ico/logo.png?t=111";
+                        //client.ClientName = "汽配龙";
+                        //client.LogoUrl = "http://images.qipeilong.cn/ico/logo.png?t=111";
 
                         <div class="panel panel-default" style="margin-top:20px;">
                             <div class="panel-heading">
