--- a/Hiwjcn.Web/ui/ui/ui.css
+++ b/Hiwjcn.Web/ui/ui/ui.css
@@ -94,7 +94,7 @@
 .logo-img {
     margin-right: 28px;
     background: none;
-    background-image: url(/static/image/logo/logo-nav.png);
+    background-image: url(http://images.qipeilong.cn/ico/logo.png?t=111);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
