--- a/Hiwjcn.Web/Views/Shared/UserLayout.cshtml
+++ b/Hiwjcn.Web/Views/Shared/UserLayout.cshtml
@@ -14,29 +14,31 @@
 
 <body>
 
+    @IncludeView("nav")
+
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="panel panel-default">
+        <div class="row" style="margin-top:20px;">
+            <div class="col-md-3">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
-                        userinfo
+                        个人设置
                     </div>
-                    <div class="panel-body">
-                        <div class="list-group">
-                            <a class="list-group-item" href="" target="_self">fasdf</a>
-                            <a class="list-group-item" href="" target="_self">fasdf</a>
-                            <a class="list-group-item" href="" target="_self">fasdf</a>
-                            <a class="list-group-item" href="" target="_self">fasdf</a>
-                            <a class="list-group-item" href="" target="_self">fasdf</a>
-                            <a class="list-group-item" href="" target="_self">fasdf</a>
-                            <a class="list-group-item" href="" target="_self">fasdf</a>
-                            <a class="list-group-item" href="" target="_self">fasdf</a>
-                            <a class="list-group-item" href="" target="_self">fasdf</a>
-                        </div>
+                    <div class="list-group">
+                        <a class="list-group-item" href="" target="_self">授权的应用</a>
+                        <a class="list-group-item" href="" target="_self">我的应用</a>
+                        <a class="list-group-item" href="" target="_self">fasdf</a>
+                        <a class="list-group-item" href="" target="_self">fasdf</a>
+                        <a class="list-group-item" href="" target="_self">fasdf</a>
+                        <a class="list-group-item" href="" target="_self">fasdf</a>
+                        <a class="list-group-item" href="" target="_self">fasdf</a>
+                        <a class="list-group-item" href="" target="_self">fasdf</a>
+                        <a class="list-group-item" href="" target="_self">fasdf</a>
                     </div>
                 </div>
+
+                <a href="/account/logout" class="btn btn-danger btn-block" target="_self">退出登录</a>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-9">
                 @RenderBody()
             </div>
         </div>
