--- a/Hiwjcn.Web/Views/Shared/UserLayout.cshtml
+++ b/Hiwjcn.Web/Views/Shared/UserLayout.cshtml
@@ -24,15 +24,14 @@
                         个人设置
                     </div>
                     <div class="list-group">
+                        <a class="list-group-item" href="" target="_self">信息</a>
+                        <a class="list-group-item" href="" target="_self">账户</a>
+                        <a class="list-group-item" href="" target="_self">常用地址</a>
+                        <a class="list-group-item" href="" target="_self">通知</a>
+                        <a class="list-group-item" href="" target="_self">账单</a>
+                        <a class="list-group-item" href="" target="_self">登录日志</a>
                         <a class="list-group-item" href="" target="_self">授权的应用</a>
                         <a class="list-group-item" href="" target="_self">我的应用</a>
-                        <a class="list-group-item" href="" target="_self">fasdf</a>
-                        <a class="list-group-item" href="" target="_self">fasdf</a>
-                        <a class="list-group-item" href="" target="_self">fasdf</a>
-                        <a class="list-group-item" href="" target="_self">fasdf</a>
-                        <a class="list-group-item" href="" target="_self">fasdf</a>
-                        <a class="list-group-item" href="" target="_self">fasdf</a>
-                        <a class="list-group-item" href="" target="_self">fasdf</a>
                     </div>
                 </div>
 
