--- a/Hiwjcn.Web/Views/Shared/auth_scope_confirm.cshtml
+++ b/Hiwjcn.Web/Views/Shared/auth_scope_confirm.cshtml
@@ -10,7 +10,7 @@
 
 <div class="panel panel-default" style="margin-top:20px;">
     <div class="panel-heading">
-        <h3>授权访问</h3>
+        <h4>授权访问</h4>
     </div>
     <div class="panel-body" style="background-color:#1f91bd;color:white;">
         <div class="row">
@@ -60,7 +60,7 @@
                     </button>
                 </div>
                 <div class="pull-left">
-                    <button class="btn btn-danger" id="deny_btn">
+                    <button class="btn btn-link" id="deny_btn">
                         <span class="fa fa-remove"></span>
                         <span>取消</span>
                     </button>
