--- a/Hiwjcn.Web/Views/AuthManage/Clients.cshtml
+++ b/Hiwjcn.Web/Views/AuthManage/Clients.cshtml
@@ -1,10 +1,10 @@
 ﻿
-@{ 
+@{
     this.SetLayout("AuthManageLayout");
 }
 
 <div class="panel panel-default">
-    <div class="panel-heading">Scope</div>
+    <div class="panel-heading">Client</div>
     <div class="panel-body">
         12
     </div>
