--- a/Hiwjcn.Web/Views/Shared/AuthManageLayout.cshtml
+++ b/Hiwjcn.Web/Views/Shared/AuthManageLayout.cshtml
@@ -24,9 +24,11 @@
                         Auth管理
                     </div>
                     <div class="list-group">
-                        <a class="list-group-item" href="/authmanage/scopes" target="_self">Scope</a>
-                        <a class="list-group-item" href="/authmanage/clients" target="_self">Client</a>
-                        <a class="list-group-item" href="/authmanage/tokens" target="_self">Token</a>
+                        <a class="list-group-item" href="/AuthManage/Statics" target="_self">数据统计</a>
+                        <a class="list-group-item" href="/AuthManage/Scopes" target="_self">作用域-Scope</a>
+                        <a class="list-group-item" href="/AuthManage/Clients" target="_self">应用-Clients</a>
+                        <a class="list-group-item" href="/AuthManage/Tokens" target="_self">Token</a>
+                        <a class="list-group-item" href="/AuthManage/Tasks" target="_self">定时任务</a>
                     </div>
                 </div>
             </div>
