--- a/Hiwjcn.Web/Views/Shared/nav.cshtml
+++ b/Hiwjcn.Web/Views/Shared/nav.cshtml
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="main_nav">
 
                 @{
-                    var list = ViewData["nav_list"] as List<CategoryModel>;
+                    var list = Com.NewIfNull<List<CategoryModel>>("nav_list");
 
                     if (ValidateHelper.IsPlumpList(list))
                     {
@@ -79,9 +79,6 @@
                             <span class="fa fa-life-ring"></span>
                             <span style="text-indent:-999999px;display:inline-block;width:0;">帮助</span>
                         </a>
-                    </li>
-                    <li>
-                        <a href="/hotel/choose/" target="_self">123</a>
                     </li>
                     <li>
                         <a href="/user/msg/" class="layer_win" target="_blank" data-toggle="tooltip" data-placement="bottom" title="消息" style="color:red;">
