--- a/Hiwjcn.Web/Views/AuthManage/Scopes.cshtml
+++ b/Hiwjcn.Web/Views/AuthManage/Scopes.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using Hiwjcn.Core.Domain.Auth;
 @{ 
     this.SetLayout("AuthManageLayout");
 }
@@ -6,6 +6,50 @@
 <div class="panel panel-default">
     <div class="panel-heading">Scope</div>
     <div class="panel-body">
-        12
+        @{ 
+            var list = Com.NewIfNull<List<AuthScope>>(ViewData["list"]);
+            if (ValidateHelper.IsPlumpList(list))
+            {
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <td>名称</td>
+                            <td>展示名称</td>
+                            <td>描述</td>
+                            <td>优先级</td>
+                            <td>修改时间</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var m in list)
+                        {
+                            <tr>
+                                <td>@(m.Name)</td>
+                                <td>@(m.DisplayName)</td>
+                                <td>@(m.Description)</td>
+                                <td>
+                                    @if (m.Important > 0)
+                                    {
+                                        <span class="label label-danger">重要</span>
+                                    }
+                                </td>
+                                <td>@(m.UpdateTime.GetSimpleFriendlyDateTime())</td>
+                            </tr>
+                        }
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="5" class="right">
+                                @(Html.Raw(ViewData["pager"]))
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+            }
+            else
+            {
+                <div class="alert alert-info">没有定义scope</div>
+            }
+        }
     </div>
 </div>
