--- a/Hiwjcn.Web/Views/AuthManage/Scopes.cshtml
+++ b/Hiwjcn.Web/Views/AuthManage/Scopes.cshtml
@@ -10,7 +10,7 @@
             var list = Com.NewIfNull<List<AuthScope>>(ViewData["list"]);
             if (ValidateHelper.IsPlumpList(list))
             {
-                <table class="table table-hover">
+                <table class="table table-striped table-hover">
                     <thead>
                         <tr>
                             <td>名称</td>
