--- a/Hiwjcn.Web/Views/AuthManage/Clients.cshtml
+++ b/Hiwjcn.Web/Views/AuthManage/Clients.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Hiwjcn.Core.Domain.Auth;
 @{
     this.SetLayout("AuthManageLayout");
+    this.SetTitle("应用");
 }
 
 <div class="panel panel-default">
