--- a/Hiwjcn.Web/Views/Account/Login.cshtml
+++ b/Hiwjcn.Web/Views/Account/Login.cshtml
@@ -70,7 +70,7 @@
 
                 postJson('/Account/LoginByPassword', data, function (res) {
                     if (res && res.success) {
-                        window.location.reload();
+                        //window.location.reload();
                     }
                     else {
                         if (res && res.msg) {
